fix: align studentdisplayName and email horizontally on class-groups overview

--- a/src/app/pages/classgroup-overview/classgroup-overview.component.css
+++ b/src/app/pages/classgroup-overview/classgroup-overview.component.css
@@ -14,3 +14,9 @@ mat-expansion-panel p {
     justify-content: end;
     margin-right: 3rem;
 }
+
+.horizontal-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
